# rust-utils

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  build.rs  cbindgen.toml  pyproject.toml  rustfmt.toml  viam_rust_utils.h
.cargo/: config.toml
.github/workflows/: build_binaries.yml  checks.yml  license_finder.yml  new_release.yml  publish.yml  release.yml  set_reviewers.yml  test.yml  update_protos.yml
dialdbg/: Cargo.toml  README.md
dialdbg/src/: main.rs  parse.rs  rtt.rs  strings.rs  test.rs
doc/: dependency_decisions.yml
etc/: install_buf.sh  run_echo_server.sh  test.sh
examples/: Cargo.toml
examples/src/echo/: main.rs
examples/src/ffi/cpp/: Makefile  ffi_echo.cc  ffi_robot.cc
src/: lib.rs
src/dialdbg/: README.md  main.rs  parse.rs  rtt.rs  stats.rs  test-relay-and-p2p-dial-opts.sh  test.rs
src/ffi/: dial_ffi.rs  mod.rs
src/ffi/spatialmath/: axis_angle.rs  euler_angles.rs  mod.rs  orientation_vector.rs  quaternion.rs  rotation_matrix.rs  vector3.rs
src/proxy/: mod.rs  tcp.rs  uds.rs
src/rpc/: base_channel.rs  client_channel.rs  client_stream.rs  dial.rs  dial_report.rs  log_prefixes.rs  mod.rs  webrtc.rs
src/spatialmath/: quaternion.rs  utils.rs  vector3.rs
stun-patch/: Cargo.toml
stun-patch/src/: error_code.rs
tests/: echo_test.rs
tests/server/: entrypoint.sh  go.mod  go.sum  main.go
