[package]
name = "viam-rust-utils"
version = "0.0.15"
edition = "2021"
license = "Apache-2.0"
description = "Utilities designed for use with Viamrobotics's SDKs"
repository = "https://github.com/viamrobotics/rust-utils"
authors = ["Viam, inc. <contact@viam.com>"]

[lib]
crate-type = ["cdylib","lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"]}
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.1.0"
dashmap = "5.4.0"
derivative = "2.2.0"
ffi_helpers = "0.3.0"
float-cmp = "0.9.0"
futures = {version = "0.3", default-features = false, features = ["alloc", "executor"]}
futures-core = "0.3"
futures-util = "0.3"
http = "0.2.7"
http-body = {version = "0.4.4"}
hyper = { version = "0.14.20", features = ["full"]  }
interceptor = "0.8.0"
interfaces = "0.0.8"
libc = {version = "0.2"}
log = "0.4.17"
# TODO: We are using a commit hash to include a bug fix that has not yet been
# merged in a crate. Once the new crate is released, please use that instead
# of the git revision below. As of this comment the latest version is `3.0.0`.
mdns = { git = "https://github.com/stuqdog/mdns.git", rev = "5d85dc4bf60e4a7f665d797d3f30d7216118dd3b" }
nalgebra = "0.31.4"
prost = "0.10"
prost-types = "0.10"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.19", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
tokio-rustls = { version = "0.23.4"}
tonic = {version = "0.7.2",features = [ "tls", "compression", "tls-roots",]}
tower = { version = "0.4" }
tower-http = { version = "0.3.3", features = ["add-extension","auth","propagate-header","set-header","sensitive-headers","trace","compression-gzip"]}
tracing = {version = "0.1.34"}
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
webpki-roots = "0.21.1"
webrtc = "0.7.2"

[dev-dependencies]
async-stream = "0.3.3"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = {version = "0.7.2",features = ["prost", "compression"]}
