[package]
name = "viam-dialdbg"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viam = {package="viam-rust-utils", path = "../"}
log = "0.4.18"
anyhow = "1.0.71"
tokio = "1.28.2"
log4rs = "1.2.0"
clap = { version = "4.3.2", features = ["derive"] }
serde_json = "1.0.97"
chrono = "0.4.26"
# Must match version of webrtc of rust-utils.
webrtc = "0.7.3"
serde = "1.0.164"
futures-util = "0.3.28"
viam-mdns = "3.0.1"
